backend/build_output.txt

> Task :compileJava FAILED
D:\spring_boot_project\62dn-project-2026\backend\src\main\java\com\dnproject\platform\controller\AdminApplicationController.java:21: error: cannot find symbol
    public ResponseEntity<ApiResponse<PageResponse<AdminAdoptionResponse>>> getAdoptionApplications(Pageable pageable) {
                                                   ^
  symbol:   class AdminAdoptionResponse
  location: class AdminApplicationController
D:\spring_boot_project\62dn-project-2026\backend\src\main\java\com\dnproject\platform\controller\AdminApplicationController.java:43: error: cannot find symbol
    public ResponseEntity<ApiResponse<PageResponse<AdminVolunteerResponse>>> getVolunteerApplications(
                                                   ^
  symbol:   class AdminVolunteerResponse
  location: class AdminApplicationController
D:\spring_boot_project\62dn-project-2026\backend\src\main\java\com\dnproject\platform\controller\AdminApplicationController.java:66: error: cannot find symbol
    public ResponseEntity<ApiResponse<ApplicationStatsResponse>> getStats() {
                                      ^
  symbol:   class ApplicationStatsResponse
  location: class AdminApplicationController
3 errors

[Incubating] Problems report is available at: file:///D:/spring_boot_project/62dn-project-2026/backend/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  D:\spring_boot_project\62dn-project-2026\backend\src\main\java\com\dnproject\platform\controller\AdminApplicationController.java:21: error: cannot find symbol
      public ResponseEntity<ApiResponse<PageResponse<AdminAdoptionResponse>>> getAdoptionApplications(Pageable pageable) {
                                                     ^
    symbol:   class AdminAdoptionResponse
    location: class AdminApplicationController
  D:\spring_boot_project\62dn-project-2026\backend\src\main\java\com\dnproject\platform\controller\AdminApplicationController.java:43: error: cannot find symbol
      public ResponseEntity<ApiResponse<PageResponse<AdminVolunteerResponse>>> getVolunteerApplications(
                                                     ^
    symbol:   class AdminVolunteerResponse
    location: class AdminApplicationController
  D:\spring_boot_project\62dn-project-2026\backend\src\main\java\com\dnproject\platform\controller\AdminApplicationController.java:66: error: cannot find symbol
      public ResponseEntity<ApiResponse<ApplicationStatsResponse>> getStats() {
                                        ^
    symbol:   class ApplicationStatsResponse
    location: class AdminApplicationController
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 2s
1 actionable task: 1 executed
